--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,7 @@ jobs:
     runs-on: 'ubuntu-latest'
     strategy:
       matrix:
-        talk: ['gotenberg']
+        talk: ['gotenberg', 'symfony-online-fireside-chat']
       fail-fast: false
     steps:
       - name: 'Checkout'
